--- a/PropertyManager/pom.xml
+++ b/PropertyManager/pom.xml
@@ -19,6 +19,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <exclusions>
+              <exclusion>
+                <groupId>com.zaxxer</groupId>
+                <artifactId>HikariCP</artifactId>
+              </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -57,6 +63,12 @@
 		    <groupId>org.webjars.npm</groupId>
 		    <artifactId>typescript</artifactId>
 		    <version>3.8.3</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.tomcat</groupId>
+			<artifactId>tomcat-jdbc</artifactId>
+			<version>9.0.27</version>
 		</dependency>
 	    
     </dependencies>
