--- a/locker size UI/package.json
+++ b/locker size UI/package.json
@@ -10,11 +10,17 @@
     "license": "ISC",
     "dependencies": {
         "@types/chai-http": "^4.2.0",
+        "@types/chart.js": "^2.9.21",
+        "@types/d3": "^5.7.2",
         "@types/express": "^4.17.6",
         "axios": "^0.19.2",
         "chai": "^4.2.0",
         "chai-http": "^4.3.0",
+        "chart.js": "^2.9.3",
         "clockpicker": "0.0.7",
+        "d3": "^5.16.0",
+        "d3-tip": "^0.9.1",
+        "jquery": "^3.5.1",
         "mocha": "^7.1.2",
         "npm": "^6.14.5",
         "ts-node": "^8.10.1",
