--- a/locker size UI/tsconfig.json
+++ b/locker size UI/tsconfig.json
@@ -2,7 +2,10 @@
     "compilerOptions": {
         "module": "commonjs",
         "moduleResolution": "node",
-        "sourceMap": true
+        "sourceMap": true,
+        "lib": [
+            "es2017",
+        ],
     },
     "files": [
         "./main.ts",
