--- a/locker size UI/package.json
+++ b/locker size UI/package.json
@@ -21,6 +21,7 @@
         "d3": "^5.16.0",
         "d3-tip": "^0.9.1",
         "jquery": "^3.5.1",
+        "mdbootstrap": "^4.19.0",
         "mocha": "^7.1.2",
         "npm": "^6.14.5",
         "ts-node": "^8.10.1",
